css/portfolio.css
@font-face {
	font-family: 'AvenirLight';
	src: url('../fonts/AvenirLTStd-Book.woff') format('woff');
}
@font-face {
	font-family: 'AvenirBold89';
	src: url('../fonts/AvenirLTStd-Heavy.woff') format('woff');
}
@font-face {
	font-family: 'TypoGroteskBold';
	src: url('../fonts/typo_grotesk_bold_demo-webfont.woff') format('woff');
}

html, body {
    min-height: 100%;
    height: 100%;
    font-family: 'AvenirLight';
    font-weight: 200;
    font-size: 0px;
}
html, body, ul, div, img, h1, h2, h3, a, li {
	padding:0;
	margin:0;
}

/*---HEADER---*/
.header {
    background-color: rgba(255,255,255, 0.9);
    display: block;
    width: 100%;
    position: fixed;
    top:0;
}
.header img {
	padding:16px 0 16px 40px;
    height: 80px;
    width: auto;
	vertical-align: bottom;
}
.header ul {
	float:right;
	margin-top:44px;
}
.header li {
    font-family: 'TypoGroteskBold';
	list-style-type: none;
	display: inline-block;
	margin-right: 67px;
	padding-bottom: 6px;
}
.header a {
	font-size: 25px;
	text-decoration: none;
	color: #6C6C6C;
}
.header li:nth-child(2) {
	padding-bottom: 3px;
	border-bottom: 3px solid #A9A9A9;
	vertical-align: middle;
}

/*---BODY---*/
.body {
    margin: 132px auto 50px auto;
    width: calc(90% - 80px);
    max-width: 1200px;
}
.body a {
    width: 100%;
    height: 188px;
    color: white;
    margin-bottom: 25px;
    display: block;
}
.body > div > a > div {
    display: inline-block;
    margin-top: 59px;
    padding-left: 40px
}
.body h1 {
    margin-bottom: 10px;
    font-family: 'AvenirBold89';
    font-size: 32px;
}
.body h2 {
    font-family: 'AvenirBold89';
    font-size: 25px;
    margin: 105px 0 25px 0;
    color: white;
    display: inline-block;
    background-color: #6C6C6C;
    padding: 15px 20px 15px 20px;

}
.body h3 {
    font-size: 18px;
}
.body img {
    height: 188px;
    display: inline-block;
    float: right;
    margin-right: 20px;

}
#private-concert {
    background-color: #68B8DD;
}
#five-min-shower {
    background-color: #9CCAE9;
}
#five-min-shower > img {
    margin: 24px 60px 0 0;
    height: 140px;
}
#net-neutrality {
    background-color: #64BA50;
}
#net-neutrality > img {
    height: 170px;
    margin-top: 12px;
}
#photography {
    background-image: url('../images/kinacolor.jpg');
    background-size: cover;
    background-position: 20%;
}
#photography > div {
    margin-top: 74px;
}

.list-item {
    transition: box-shadow 0.4s ease;
    box-shadow: 0px 1px 7px rgba(0,0,0,0);
}
 .list-item:hover {
     box-shadow: 0px 1px 7px rgba(0,0,0,.7);
	 border-radius: 3px;
 }

/*---ANIMATIONS---*/
/* Underline From Center */
.hvr-underline-from-center {
	display: inline-block;
	vertical-align: middle;
	-webkit-transform: translateZ(0);
	transform: translateZ(0);
	box-shadow: 0 0 1px rgba(0, 0, 0, 0);
	-webkit-backface-visibility: hidden;
	backface-visibility: hidden;
	-moz-osx-font-smoothing: grayscale;
	position: relative;
	overflow: hidden;
}
.hvr-underline-from-center:before {
	content: "";
	position: absolute;
	z-index: -1;
	left: 50%;
	right: 50%;
	bottom: 0;
	background: #A9A9A9;
	height: 3px;
	-webkit-transition-property: left, right;
	transition-property: left, right;
	-webkit-transition-duration: 0.25s;
	transition-duration: 0.25s;
	-webkit-transition-timing-function: ease-out;
	transition-timing-function: ease-out;
}
.hvr-underline-from-center:hover:before, .hvr-underline-from-center:focus:before, .hvr-underline-from-center:active:before {
	left: 0;
	right: 0;
}

